ecmascript/parser/tests/test262-error-references/fail/338848861369f3b7.js.stderr
error: Expected RParen
 --> $DIR/tests/test262-parser/fail/338848861369f3b7.js:1:15
  |
1 | (function(...a, b){})
  |               ^

